completed the antsmasher. fixed boxes getting stuck with each other

--- a/js-experiments/ast5 Ant smasher (OOP)/css/styles.css
+++ b/js-experiments/ast5 Ant smasher (OOP)/css/styles.css
@@ -3,4 +3,9 @@
     height: 300px;
     position: relative;
     background-color: #88d8c0;
+
+}
+
+body {
+    background-color: #424242
 }
